--- a/elctrl/pom.xml
+++ b/elctrl/pom.xml
@@ -1,57 +1,80 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>br.com.qualityfactory.el</groupId>
-  <artifactId>elctrl</artifactId>
-  <version>0.0.1</version>
-  <packaging>war</packaging>
-  <name>ElCtrl</name>
-  <description>Controller para EL</description>
-  
-  <build>
-  	<plugins>
-  		<plugin>
-	  		<groupId>org.apache.maven.plugins</groupId>
-	  		<artifactId>maven-compiler-plugin</artifactId>
-	  		<version>3.1</version>
-	  		<configuration>
-	  			<source>1.8</source>
-	  			<target>1.8</target>
-	  		</configuration>
-  		</plugin>
-  	</plugins>
-  </build>
-  
-  <dependencies>
-  	<dependency>
-	  	<groupId>br.com.caelum</groupId>
-	  	<artifactId>vraptor</artifactId>
-	  	<version>4.1.4</version>
-  	</dependency>
-  	
-  	<dependency>
-  		<groupId>jstl</groupId>
-  		<artifactId>jstl</artifactId>
-  		<version>1.2</version>
-  	</dependency>
-  	
-  	<dependency>
-  		<groupId>javax.inject</groupId>
-  		<artifactId>javax.inject</artifactId>
-  		<version>1</version>
-  		<scope>provided</scope>
-  	</dependency>
-  	
-  	<dependency>
-  		<groupId>javax</groupId>
-  		<artifactId>javaee-web-api</artifactId>
-  		<version>7.0</version>
-  		<scope>provided</scope>
-  	</dependency>
-  	
-  	<dependency>
-	    <groupId>junit</groupId>
-	    <artifactId>junit</artifactId>
-	    <version>4.8.1</version>
-	</dependency>	
-  </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>br.com.qualityfactory.el</groupId>
+	<artifactId>elctrl</artifactId>
+	<version>0.0.1</version>
+	<packaging>war</packaging>
+	<name>ElCtrl</name>
+	<description>Controller para EL</description>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>br.com.caelum</groupId>
+			<artifactId>vraptor</artifactId>
+			<version>4.1.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-web-api</artifactId>
+			<version>7.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>br.com.qualityfactory.el</groupId>
+			<artifactId>elmdcli</artifactId>
+			<version>0.0.1</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.10</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.1.0-RC.1</version>
+		</dependency>
+
+	</dependencies>
+
 </project>
